# usdeathspy

./: getting_parquets_from_rda.py  pyproject.toml
data/: cdc_link_lookup.parquet  data_birth_cohort_1983.parquet  data_birth_cohort_2008.parquet  data_birth_cohort_2009.parquet  data_birth_cohort_2010.parquet  data_birth_cohort_2011.parquet  data_birth_cohort_2012.parquet  data_births_1968.parquet  data_births_1971.parquet  data_births_1975.parquet  data_births_1978.parquet  data_births_2018.parquet  data_births_2019.parquet  data_births_2020.parquet  data_births_2021.parquet  data_births_2022.parquet  data_births_2023.parquet  data_births_2024.parquet  data_fetal_death_1982.parquet  data_mortality_multiple_1968.parquet  data_mortality_multiple_1979.parquet  data_mortality_multiple_1980.parquet  data_mortality_multiple_1981.parquet  data_mortality_multiple_1982.parquet  data_mortality_multiple_1983.parquet  data_mortality_multiple_1984.parquet  data_mortality_multiple_1985.parquet  data_mortality_multiple_1986.parquet  data_mortality_multiple_1987.parquet  data_mortality_multiple_2003.parquet  data_mortality_multiple_2004.parquet  data_mortality_multiple_2005.parquet  data_mortality_multiple_2006.parquet  data_mortality_multiple_2007.parquet  data_mortality_multiple_2008.parquet  data_mortality_multiple_2009.parquet  data_mortality_multiple_2010.parquet  data_mortality_multiple_2011.parquet  data_mortality_multiple_2012.parquet  data_mortality_multiple_2013.parquet  (+11 more)
scripts/: build_2023_meta.py  build_icd_codes.py
src/usdeathspy/: __init__.py  api.py  downloader.py  (+2 more)
(+7 files in other folders)
